--- a/app/views/home_controller/index.html.erb
+++ b/app/views/home_controller/index.html.erb
@@ -72,7 +72,7 @@
           <nvd3 options="options" data = "items"></nvd3>
           <table>  
           <tr ng-repeat="item in items">
-            <td ng-repeat="(key, val) in item">{{key}}: {{val}}
+            <td ng-repeat="(key, val) in item">{{}}: {{}}
             </td>
           </tr>
           </table>
