--- a/app/views/home_controller/index.html.erb
+++ b/app/views/home_controller/index.html.erb
@@ -67,7 +67,7 @@
         <div ng-controller="myController">
           <button ng-click='clickButton()'><h1>Click Me</h1></button>
           <nvd3 options="options" data = "items"></nvd3>
-          <table>  
+          <table align = "center">  
           <tr ng-repeat="item in items">
             <td ng-repeat="(key, val) in item">{{key}}: {{val}}
             </td>
