--- a/app/views/home_controller/index.html.erb
+++ b/app/views/home_controller/index.html.erb
@@ -9,7 +9,7 @@
       padding: 5px;
     }
     table tr:nth-child(odd) {
-      background-color: #f1f1f1;
+      background-color: #add8e6;
     }
     table tr:nth-child(even) {
       background-color: #ffffff;
