--- a/app/views/home_controller/index.html.erb
+++ b/app/views/home_controller/index.html.erb
@@ -43,6 +43,7 @@
               showLabels: true,
               transitionDuration: 500,
               labelThreshold: 0.01,
+              use3DLighting: 1,
               legend: {
                   margin: {
                       top: 5,
