--- a/app/views/home_controller/index.html.erb
+++ b/app/views/home_controller/index.html.erb
@@ -33,7 +33,7 @@
        $scope.items = data;
        $scope.options = {
             chart: {
-              type: 'pieChart',
+              type: 'pie3d',
               height: 500,
               x: function(a){return a.player;},
               y: function(a){return a.centuries;},
@@ -43,7 +43,6 @@
               showLabels: true,
               transitionDuration: 500,
               labelThreshold: 0.01,
-              use3DLighting: 1,
               legend: {
                   margin: {
                       top: 5,
