--- a/app/views/home_controller/index.html.erb
+++ b/app/views/home_controller/index.html.erb
@@ -33,7 +33,7 @@
        $scope.items = data;
        $scope.options = {
             chart: {
-              type: 'pie3d',
+              type: 'pieChart',
               height: 500,
               x: function(a){return a.player;},
               y: function(a){return a.centuries;},
